flex/04-flex-information/style.css
body {
  font-family: 'Courier New', Courier, monospace;
}

img {
  width: 100px;
  height: 100px;
  display:flex;
  flex-direction:row;
  flex:1;
  justify-content:center;
}

.title {
  font-size: 36px;
  font-weight: 900;
  display:flex;
  flex:1;
  flex-direction: row;
  justify-content:center;
  margin-bottom:32px;
}

/* do not edit this footer */
.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 52px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: hsl(0, 0%, 93%);
}

.info {
  display:flex;
  flex:1;
  flex-direction:row;
  justify-content:center;
  align-items:center;
  gap:52px;
}

.box {
  display:flex;
  flex:1;
  flex-direction:column;
  justify-content:space-around;
}

.text{
  text-wrap:wrap;
  text-align:center;
}

